added controller to return specific user data
