# routes/users.js
@@ -6,6 +6,7 @@ const {
   recoverPassword,
   resetPassword,
   listUsers,
+  listUser,
 } = require("../controllers/users");
 const { checkUserIsAuthenticated, checkRoles } = require("../middlewares/auth");
 const { validateSchema } = require("../middlewares/validation");
@@ -22,6 +23,7 @@ router
   .get([checkUserIsAuthenticated, checkRoles([ROLES.ADMIN])], listUsers)
   .post([validateSchema(createUserSchema)], createUser);
 
+router.route("/id").post( [checkUserIsAuthenticated, checkRoles([ROLES.ADMIN])], listUser);
 router.route("/login").post([validateSchema(loginSchema)], loginUser);
 
 router
